k8s/base/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-svc
  namespace: lojaveloz
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
  type: ClusterIP
